tests/build/widget_new/not_allowed_in_when3.stderr
error: property `foo` is not allowed in when
  --> $DIR/not_allowed_in_when3.rs:22:19
   |
22 |         when self.foo.is() && self.is_pressed {
   |                   ^^^
